# zephyrproject

./: .gitignore  README.md  bitbucket-pipelines.yml
.chglog/: CHANGELOG.tpl.md
.github/workflows/: build.yml
.west/: config
app/: CMakeLists.txt  prj.conf
app/src/: main.c
boards/arm/myboard/: Kconfig.board  Kconfig.defconfig  README.md  myboard-common.dtsi  myboard.dts  myboard.yaml
drivers/sensor/examplesensor/: examplesensor.c
manifest/: README.md  west.yml
manifest_dir/: west.yml
tools/: commit-template.txt  get_latest_version.sh  release_notes.sh
